Fixed horizontal overflow, put div 2 elements

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,14 +87,19 @@ header {
 
 .white-bg {
   width: 100vw;
+  max-width: 100%;
   height: 100vh;
 }
 .green-bg {
   width: 100vw;
+  max-width: 100%;
   height: 100vh;
   background-color: #d3ded5;
 }
 
 #references {
+  width: 100vw;
+  max-width: 100%;
+  height: 50vh;
   background-color: #0f4a1a;
 }
